[gd_scene load_steps=5 format=3 uid="uid://dh5ljwfne2672"]

[ext_resource type="Script" uid="uid://s5qyd4o3e3jt" path="res://gpu-cpu-comparison/mesh_gen_comparer.gd" id="1_4riqv"]
[ext_resource type="Image" uid="uid://eepxon17wij8" path="res://gpu-cpu-comparison/heightmap.png" id="2_lxadk"]

[sub_resource type="Gradient" id="Gradient_l3ffd"]
colors = PackedColorArray(0, 0.686275, 0.658824, 1, 0.542081, 0.741499, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_g8m6x"]
gradient = SubResource("Gradient_l3ffd")
fill_to = Vector2(1, 1)

[node name="MeshComparison" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4riqv")
heightmap = ExtResource("2_lxadk")
height_scale = 24.0
mesh_subdivisions = 1024

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_g8m6x")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Create Mesh"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SeedLabel" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Seed"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SeedInput" type="SpinBox" parent="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(140, 35)
layout_mode = 2
max_value = 1000000000000.0

[node name="RandomButton" type="Button" parent="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Random"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GenerateGPUButton" type="Button" parent="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 54)
layout_mode = 2
size_flags_horizontal = 3
text = "Create (GPU)"

[node name="GenerateCPUButton" type="Button" parent="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 54)
layout_mode = 2
size_flags_horizontal = 3
text = "Create (CPU)"

[node name="PanelContainer2" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(1034, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/v_separation = 10
columns = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "GPU"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "CPU"
horizontal_alignment = 1
vertical_alignment = 2

[node name="GPUViewportContainer" type="SubViewportContainer" parent="CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(384, 384)
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="GPUViewport" type="SubViewport" parent="CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer/GridContainer/GPUViewportContainer"]
handle_input_locally = false
size = Vector2i(515, 384)
render_target_update_mode = 4

[node name="CPUViewportContainer" type="SubViewportContainer" parent="CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(384, 384)
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="CPUViewport" type="SubViewport" parent="CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer/GridContainer/CPUViewportContainer"]
handle_input_locally = false
size = Vector2i(515, 384)
render_target_update_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GPUTimeDescription" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "GPU time elapsed: "
horizontal_alignment = 2
vertical_alignment = 1

[node name="GPUTimeValue" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.941176, 0.47451, 1)
theme_override_font_sizes/font_size = 24
text = "... ms"

[node name="CPUTimeDescription" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CPU time elapsed: "
horizontal_alignment = 2
vertical_alignment = 1

[node name="CPUTimeValue" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.941176, 0.47451, 1)
theme_override_font_sizes/font_size = 24
text = "... ms"

[connection signal="pressed" from="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/GenerateGPUButton" to="." method="_on_generate_gpu_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/GenerateCPUButton" to="." method="_on_generate_cpu_button_pressed"]
